--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
-version: '3.8'
 
 services:
-  redis:
-    image: redis:latest
-    container_name: redis-server
+  minio:
+    image: docker.io/bitnami/minio:latest
     ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: ["redis-server", "--appendonly", "yes"]
+      - '9000:9000'
+      - '9001:9001'
     networks:
-      - internal_network
-
-volumes:
-  redis_data:
+      - minionetwork
+    volumes:
+      - 'minio_data:/data'
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=admin
+      - MINIO_DEFAULT_BUCKETS=admin_bucket
 
 networks:
-  internal_network:
+  minionetwork:
     driver: bridge
+
+volumes:
+  minio_data:
+    driver: local
