--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
-
-services:
-  minio:
-    image: docker.io/bitnami/minio:latest
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    networks:
-      - minionetwork
-    volumes:
-      - 'minio_data:/data'
-    environment:
-      - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=admin
-      - MINIO_DEFAULT_BUCKETS=admin_bucket
+version: '3'
 
 networks:
-  minionetwork:
-    driver: bridge
+  minio_network:
 
-volumes:
-  minio_data:
-    driver: local
+services:  
+  minio:
+    container_name: minio
+    image: minio/minio:latest
+    volumes:
+      - "${MINIO_STORAGE_LOCATION}:/data"
+    ports:
+      - "${MINIO_PORT}:9000"
+    networks:
+      - minio_network
+    restart: always      
+    environment:
+      MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
+      MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"      
+    command: server /data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
