--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,37 @@
 version: '3'
 
-networks:
-  minio_network:
-
 services:  
   minio:
     container_name: minio
     image: minio/minio:latest
     volumes:
-      - "${MINIO_STORAGE_LOCATION}:/data"
+      - minio_data:/data
     ports:
-      - "${MINIO_PORT}:9000"
+      - "9000:9000"   # S3 API
+      - "9001:9001"   # Web console
+    restart: always
     networks:
-      - minio_network
-    restart: always      
+      mynet:
+        aliases:
+          - my-localhost  # Alias for localhost access
     environment:
-      MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
-      MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"      
-    command: server /data
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin123
+    command: server /data --console-address ":9001"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+        test: ["CMD-SHELL", "wget -q -O - http://localhost:9000/minio/health/live >/dev/null 2>&1 || exit 1"]
+        interval: 30s
+        timeout: 10s
+        retries: 3
+
+
+networks:
+  mynet:
+    driver: bridge
+
+volumes:
+  minio_data:
+    driver: local
+
+
+
