More info in the desc
Added some services, added prisma nad migrations, added postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,27 @@ services:
         timeout: 10s
         retries: 3
 
+  db:
+      container_name: postgres
+      image: postgres:latest
+      environment:
+        POSTGRES_USER: admin
+        POSTGRES_PASSWORD: admin123
+        PGDATA: /data/postgres
+        POSTGRES_DB: bank
+      volumes:
+        - db:/data/postgres
+      ports:
+        - "5332:5432"
+      networks:
+        - mynet
+      restart: unless-stopped
+      healthcheck:
+        test: [ "CMD-SHELL", "pg_isready -d postgres" ]
+        interval: 30s
+        timeout: 10s
+        retries: 5
+
 
 networks:
   mynet:
@@ -32,6 +53,7 @@ networks:
 volumes:
   minio_data:
     driver: local
+  db:
 
 
 
