--- a/photopp-fe/package.json
+++ b/photopp-fe/package.json
@@ -65,7 +65,7 @@
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "4.1.11",
-    "@types/node": "20.5.7",
+    "@types/node": "^20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
