--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -3,7 +3,8 @@ flask-cors==4.0.0
 psycopg2-binary==2.9.9
 numpy==1.24.3
 face-recognition==1.3.0
-hdbscan==0.8.33
+hdbscan
 Pillow==10.1.0
 minio==7.2.0
 python-dotenv==1.0.0
+opencv-python
