removed file limits, and fetching images immediately after upload

--- a/photopp-fe/.env
+++ b/photopp-fe/.env
@@ -4,4 +4,4 @@ MINIO_SSL=false
 MINIO_PORT=9000
 MINIO_ACCESS_KEY=admin
 MINIO_SECRET_KEY=admin123
-MINIO_BUCKET_NAME=general
+MINIO_BUCKET_NAME=test
