--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,14 @@ services:
         interval: 30s
         timeout: 10s
         retries: 5
-
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - ./qdrant_storage:/qdrant/storage
+    networks:
+      - mynet
 
 networks:
   mynet:
