--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
         dockerfile: Dockerfile
       container_name: flask
       depends_on:
-      - db
+      - qdrant
       ports:
-        - "5001:5000"
+        - "5001:5001"
       networks:
         - mynet
       restart: unless-stopped    
@@ -71,8 +71,6 @@ services:
     image: qdrant/qdrant
     ports:
       - "6333:6333"
-    volumes:
-      - ./qdrant_storage:/qdrant/storage
     networks:
       - mynet
 
