--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,11 +1,10 @@
 flask==3.0.0
 flask-cors==4.0.0
-psycopg2-binary==2.9.9
 numpy==1.24.3
 face-recognition==1.3.0
-hdbscan
 Pillow==10.1.0
 minio==7.2.0
 python-dotenv==1.0.0
 opencv-python-headless
 qdrant-client==1.7.0
+scikit-learn
